--- a/index.html
+++ b/index.html
@@ -3,27 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <title>Weather Reporter</title>
-  
-  
+    
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css'>
-
-      <link rel="stylesheet" href="css/style.css">
-
-  
+  <link rel="stylesheet" href="css/style.css">  
 </head>
 
 <body>
   <section class="container">  
   <div class="row main">
     <img src="">
-    <div class="col-md-4"></div>
-    <div class="col-md-4">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
+      <p>Weather Reporter</p>
       <ul class="mainDisplay text-center">
         <li class="city" data-bind="text: city"></li>
         <li class="temp" data-bind="text: temp, click: convert "></li>
       </ul>
     </div>
-    <div class="col-md-4"></div>
+    <div class="col-md-3"></div>
   </div>
 </section>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
