--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Weather Reporter</title>
 
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css'>
+  <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/weather-icons/1.3.2/css/weather-icons.min.css'>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -18,15 +19,15 @@
       <ul class="mainDisplay text-center">
         <li class="city" data-bind="text: city"></li>
         <li class="temp" data-bind="text: temp, click: convert "></li>
+        <li class="img"><i data-bind="css: iconClass"></i></li>
       </ul>
     </div>
     <div class="col-md-3"></div>
   </div>
 </section>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.1/knockout-min.js'></script>
-
-    <script src="js/index.js"></script>
+<script src="js/index.js"></script>
 
 </body>
 </html>
